more minor spacing fixes

--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -27,7 +27,7 @@
     border-top: 2px solid #ffcd00;
     display: block;
     content: " ";
-    width: 2em;
+    width: 3em;
     margin-left: 0.5em;
   }
   
